--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -62,4 +62,5 @@ Sandro Santilli	<strk at keybit.net>
 Alessandro Pasotti	<elpaso at itopen.it>
 Even Rouault	<even dot rouault at spatialys dot com>
 Paul Blottiere	<blottiere dot paul at gmail dot com>
+Peter Petrik	<zilolv dot gmail dot com>
 Mathieu Pellerin	<nirvn dot asia at gmail dot com>
