Added ScaleBar and MessageLog to qgisquick + docs. Added to qgis_quick_app as well.

--- a/doc/qgsquick.dox
+++ b/doc/qgsquick.dox
@@ -13,6 +13,8 @@ QGIS Quick consists of a Qt plugin that provides the QML components and of a sha
 
 \subsection qgsquick_overview_widgets QML Classes
 \subsubsection qgsquick_overview_widgets_mapcanvas MapCanvas
+\subsubsection qgsquick_overview_widgets_scalebar ScaleBar
+\subsubsection qgsquick_overview_widgets_messagelog MessageLog
 
 \section qgsquick_styling Styling
 
