--- a/doc/qgsquick.dox
+++ b/doc/qgsquick.dox
@@ -13,8 +13,12 @@ QGIS Quick consists of a Qt plugin that provides the QML components and of a sha
 
 \subsection qgsquick_overview_widgets QML Classes
 \subsubsection qgsquick_overview_widgets_mapcanvas MapCanvas
+Similarly to QgsMapCanvas, this component can be used for displaying GIS data on a canvas. More info about the QgsQuickMapCanvas qgsquickmapcanvas.h qgsquickmapcanvas.cpp.
 \subsubsection qgsquick_overview_widgets_scalebar ScaleBar
+A QML component that shows the scale ratio between its length and distance on the MapCanvas. There are predefined rounded values for several zooming levels with 'm' or 'km' postfixes. After any zoom in/out event on canvas recalculates its properties and updates text on the ScaleBar.
+
 \subsubsection qgsquick_overview_widgets_messagelog MessageLog
+A simple panel which can be used for publishing logs messages to a user such as basic information about the application or its status.
 
 \section qgsquick_styling Styling
 
